crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__picker_120x40.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP | choose an interface | READ-ONLY | drop 0                                                         ? help "
"┌ Devices (0) | sort: instance ↑ ──────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                       ┌ Choose the BACnet/IP interface ──────────────────────────────────────┐                       │"
"│                       │    1  en0        10.0.1.5         broadcast 10.0.1.255               │                       │"
"│                       │ >  2  en7        192.168.50.20    broadcast 192.168.50.255           │                       │"
"│                       │                                                                      │                       │"
"│                       │ Enter use | Up/Down move | 1-9 pick | Esc quit                       │                       │"
"│                       │ Tip: -i <IP> skips this dialog.                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
