crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__too_small_80x23.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
"Terminal too small: 80x23.                                                      "
"bacnet tui needs at least 80x24 (120x40 for the full layout).                   "
"Resize the window, or press q to quit.                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
