crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__who_is_error_120x40.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                                                           ? help "
"┌ Devices (0) | sort: instance ↑ ──────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                       No devices yet. Press d to send a Who-Is.                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                 ┌ Who-Is ──────────────────────────────────────────────────────────────────────────┐                 │"
"│                 │  Scope   < Directed (one address) >  Left/Right to change                        │                 │"
"│                 │ >Target  2:1234_                   IP or IP:port                                 │                 │"
"│                 │  Range                             blank = all, N, or LOW-HIGH                   │                 │"
"│                 │  Listen  3                         seconds to wait for replies                   │                 │"
"│                 │                                                                                  │                 │"
"│                 │ '2:1234' is not an address; a directed Who-Is needs IP[:port] or [IPv6]:port     │                 │"
"│                 │                                                                                  │                 │"
"│                 │                                                                                  │                 │"
"│                 │                                                                                  │                 │"
"│                 └ Enter send | Tab next field | Esc close ─────────────────────────────────────────┘                 │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
