crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__who_is_warning_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                   ? help "
"┌ Devices (1) | sort: instance ↑ ──────────────────────────────────────────────┐"
"│  Instance* Address                         Net    Vendor APDU  Seg      Seen │"
"│> 7         10.0.0.7:47808                  local  1      1476  none     0s   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Who-Is ──────────────────────────────────────────────────────────────────┐ │"
"│ │ >Scope   < Global broadcast >      Left/Right to change                  │ │"
"│ │  Target                            not used for this scope               │ │"
"│ │  Range                             blank = all, N, or LOW-HIGH           │ │"
"│ │  Listen  3                         seconds to wait for replies           │ │"
"│ │                                                                          │ │"
"│ │ Warning: Global Who-Is, no range: every device on every network answers  │ │"
"│ │ (1 device known).                                                        │ │"
"│ │ Press Enter again to send, or change a field.                            │ │"
"│ │                                                                          │ │"
"│ └ Enter send | Tab next field | Esc close ─────────────────────────────────┘ │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
